# books

./: .gitignore  README
Books20/: .gitignore  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  TODO  aab20.xml  configure.ac  configure.in  makefile.biblion  makefile.jims_macbook  makefile.macbook
Books20/Data/: .gitignore  TimeLine.ods  ajb.ods  ajb65_contents.txt  ajb68_books.docx  ajb68_contents.txt  journals.xml  radiohistory.txt
Books20/Data/AAA/: AAA_counts.xlsx  HowTo.tex  aaa01_books.xml  aaa01s03_books.xml  aaa01s12_books.xml  aaa02_books.xml  aaa02s03_books.xml  aaa02s12_books.xml  aaa03_books.xml  aaa03s03_books.xml  aaa03s12_books.xml  aaa04_books.xml  aaa04s03_books.xml  aaa04s12_books.xml  aaa05_books.xml  aaa05s03_books.xml  aaa05s12_books.xml  aaa06_books.xml  aaa06s03_books.xml  aaa07_books.xml  aaa08_books.xml  aaa09_books.xml  aaa10_books.xml  aaa11_books.xml  aaa12_books.xml  aaa13_books.xml  aaa14_books.xml  aaa15_books.xml  aaa16_books.xml  aaa17_books.xml  aaa18_books.xml  aaa19_books.xml  aaa20_books.xml  aaa21_books.xml  aaa22_books.xml  aaa23_books.xml  aaa24_books.xml  aaa25_books.xml  aaa26_books.xml  aaa27_books.xml  (+13 more)
Books20/Data/Ads/: ads1899_books.xml  ads1900_books.xml  ads1901_books.xml  ads1902_books.xml  ads1903_books.xml  ads1904_books.xml  ads1905_books.xml  ads1906_books.xml  ads1907_books.xml  ads1908_books.xml  ads1909_books.xml  ads1910_books.xml  ads1911_books.xml  ads1912_books.xml  ads1913_books.xml  ads1914_books.xml  ads1915_books.xml  ads1916_books.xml  ads1917_books.xml  ads1918_books.xml  ads1919_books.xml  ads1920_books.xml  ads1921_books.xml  ads1922_books.xml  ads1923_books.xml  ads1924_books.xml  ads1925_books.xml  ads1926_books.xml  ads1927_books.xml  ads1928_books.xml  ads1929_books.xml  ads1930_books.xml  ads1931_books.xml  ads1932_books.xml  ads1933_books.xml  ads1934_books.xml  ads1935_books.xml  ads1936_books.xml  ads1937_books.xml  ads1938_books.xml  (+31 more)
Books20/Data/Ajb/: .gitignore  AJB_counts.xlsx  ajb.ods  ajb01_books.xml  ajb01_contents.txt  ajb02_books.xml  ajb03_books.xml  ajb04_books.xml  ajb05_books.xml  ajb06_books.xml  ajb07_books.xml  ajb08_books.xml  ajb09_books.xml  ajb10_books.xml  ajb11_books.xml  ajb12_books.xml  ajb13_books.xml  ajb14_books.xml  ajb15_books.xml  ajb16_books.xml  ajb17_books.xml  ajb18_books.xml  ajb19_books.xml  ajb20_books.xml  ajb21_books.xml  ajb22_books.xml  ajb23_books.xml  ajb24_books.xml  ajb25_books.xml  ajb26_books.xml  ajb27_books.xml  ajb28_books.xml  ajb29_books.xml  ajb30_books.xml  ajb31_books.xml  ajb32_books.xml  ajb33_books.xml  ajb34_books.xml  ajb35_books.xml  ajb36_books.xml  (+81 more)
Books20/Data/HJS/: count_isbn.py  hjs01_books.xml  hjs02_books.xml  hjs03_books.xml  hjs04_books.xml  hjs94_books.xml  hjs_all.xml  hjs_jrf.xml  jrf_cat.tex  make94.py  merge.py
Books20/Data/Testing/: AJBcomments.py  BookEntry.py  BookEntry.ui  aaa.pl  ajb.pl  ajb.py  ajb65_books.txt  ajb66_books.txt  ajb67_books.txt  ajb68_books.txt  ajb_aaa.json  ajb_aaa.py  contents.c  entry.py  entry2_7.py
Books20/Docs/: 18Cent.tex  Backup.txt  BooksNoted.bib  BooksRead.bib  DatabaseDesign.tex  DatabaseQuestions.txt  Makefile  Makefile.am  MasterBib.bib  Notes.tex  Quotes.tex  Support.txt  Words.txt  biblio_notes.tex  book_notes.tex  docs.tex  gitSetup.txt  history_notes.tex  private_links.txt  socsci_notes.tex  svnSetup.txt  world_history_notes.tex
Books20/Docs/Admin/: Gottingen.txt  Support.txt  autotools.txt  gitSetup.txt  private_links.txt  svnSetup.txt
Books20/Docs/Bibliography/: .gitignore  Makefile.am  bibliography.tex  testbib.bib
Books20/Docs/Catalogues/: Makefile.am  bib_style  catalogue.py  hjs_books.tex  hjs_catalogue.tex
Books20/Docs/Collecting/: .gitignore  Collecting.tex  Makefile.am
Books20/Docs/DatabaseDesign/: .gitignore  DatabaseDesign.tex  DatabaseQuestions.txt  Makefile.am
Books20/Docs/Handbook/: .gitignore  Makefile.am  handbuch.tex  hb.tex  hbintro.tex
Books20/Docs/History/: Makefile.am  history.bib  history.tex  longair1995.tex  notes.tex
Books20/Docs/Hjs/: .gitignore  Makefile.am  ads_hjs.bib  aip_pto45_83.bib  apa_obit.bib  author.idx  author.index  author2.idx  biography.tex  books.tex  cat_entry.py  catalogue_xml.py  hjs.bib  hjs_baas_obit.bib  hjs_catalogue.tex  hjs_test.xml  hjsentry.py  howto.tex  inv94entry.py  inventory94.tex  library.tex  test_hjs.py  trans.py
Books20/Docs/Journals/: .gitignore  Makefile.am  fbc.txt  journals.tex  skytel.tex  skytel_table.py  table.py
Books20/Docs/Notes/: 18Cent.tex  Makefile.am  Notes.tex  biblio_notes.tex  book_notes.tex  book_references.tex  history_notes.tex  socsci_notes.tex  world_history_notes.tex
Books20/Docs/Questions/: .gitignore  Makefile.am  Questions.tex
Books20/Docs/Quotes/: .gitignore  Makefile.am  Quotes.tex
Books20/Manuscript/: .gitignore  Makefile  Makefile.am  astro_20.tex  astro_pre.tex  books20.tex  intro.tex  preface.tex  references.bib  the_books.tex  the_process.tex
Books20/Playground/: STcount.txt  aaa_parser  books20.org  copyright_list  countst.py  gotit.py  make_list  missing_journals  python_requirements.txt  selection  sortbooks  user_interface.org  window.txt
Books20/Scripts/: CreateTables.sql  DeleteTables.sql  InitialSetup.sql  Makefile  Rebuild.sql  aribib.pl
Books20/Tools/: .gitignore  BookEntry  MANIFEST.in  Makefile.am  README.txt  ajbbooks  journals  journalstest  ppxml  setup.py  validateXML  validateXML.py  versions
Books20/WebPages/: 20thCentury.php  20thCentury.txt  Auction.php  Auctions.txt  BibRefs.txt  BibSources.txt  BibTools.txt  Bibliographies.php  BlogLists.php  BlogLists.txt  BookBinding.php  BookBinding.txt  BookMaking.txt  BookStores.txt  BooksBooks.php  BooksOnLine.txt  Collecting.txt  DigitalHum.php  DigitalHum.txt  HistoryAstronomy.txt  HistoryPublishing.txt  HistoryReading.txt  HomeLibrary.txt  Libraries.txt  Makefile  Makefile.am  Python.php  PythonTools.txt  RareBooks.txt  References.txt  Resources.txt  SemanticWeb.php  SemanticWeb.txt  SociologyScience.txt  ToDoList.php  ToDoList.txt  Tools.txt  Writing.php  Writing.txt  index.html  (+2 more)
(+541 files in other folders)
