#
# Makefile
#
#   This makefile contains the instructions for building the
#   building the stuff for the book "Some Important Books in Astronomy and
#   Astrophysics in the 20th Century"
#
#
#   Copyright 2008 James R. Fowler
#
#   All rights reserved. No part of this publication may be
#   reproduced, stored in a retrival system, or transmitted
#   in any form or by any means, electronic, mechanical,
#   photocopying, recording, or otherwise, without prior written
#   permission of the author.
# 
#SUBDIRS = Data Docs Manuscript Scripts WebPages
SUBDIRS = Docs Manuscript WebPages
