dnl
dnl Configure.am
dnl
dnl   This configure contains the instructions for building the
dnl   building the stuff for the book "Some Important Books in Astronomy and
dnl   Astrophysics in the 20th Century"
dnl
dnl
dnl   Copyright 2008 James R. Fowler
dnl
dnl   All rights reserved. No part of this publication may be
dnl   reproduced, stored in a retrival system, or transmitted
dnl   in any form or by any means, electronic, mechanical,
dnl   photocopying, recording, or otherwise, without prior written
dnl   permission of the author.
dnl

AC_INIT([Books], [1.0])
AM_INIT_AUTOMAKE()

AC_PROG_INSTALL()

AC_OUTPUT(Makefile
      Docs/Makefile
      Docs/Notes/Makefile
      Docs/Series/Makefile
      Docs/Style/Makefile
      Tools/TeX/Makefile
      Manuscript/Makefile
      WebPages/Makefile
      WebPages/Images/Makefile)
