dnl Begin copyright
dnl
dnl  /home/jrf/Documents/books/Books20/configure.ac
dnl  
dnl   Part of the Books20 Project
dnl
dnl   Copyright 2008 James R. Fowler
dnl
dnl   All rights reserved. No part of this publication may be
dnl   reproduced, stored in a retrival system, or transmitted
dnl   in any form or by any means, electronic, mechanical,
dnl   photocopying, recording, or otherwise, without prior written
dnl   permission of the author.
dnl
dnl
dnl End copyright
dnl
dnl   This configure contains the instructions for building the
dnl   stuff for the Books20 Project.

AC_INIT([Books], [2.0])
AM_INIT_AUTOMAKE()

AC_PROG_INSTALL()

AC_OUTPUT(Makefile
      Docs/Makefile
      Docs/DatabaseDesign/Makefile
      Docs/Quotes/Makefile
      Docs/Notes/Makefile
      Docs/Series/Makefile
      Docs/Style/Makefile
      Manuscript/Makefile
      Tools/Makefile
      Tools/build/Makefile
      Tools/emacs/Makefile
      Tools/python/Makefile
      Tools/python/aabooks/Makefile
      Tools/python/aabooks/lib/Makefile
      Tools/python/aabooks/ajbbook/Makefile
      Tools/python/aabooks/journal/Makefile
      Tools/python/doc/Makefile
      Tools/TeX/Makefile
      Tools/xml/Makefile
      WebPages/Makefile
      WebPages/Images/Makefile)
